--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11971,44 +11971,105 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-#mainTitle-section {
-  text-align: center;
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: cadetblue;
+  padding: 10px 0;
 }
 
-#mainContent-section {
+#root {
+  background-color: lightgray;
+  max-width: 710px;
+  min-width: 400px;
+  padding: 10px 0;
+  border: solid black 3px;
+  border-radius: 15px;
+}
+#root #mainTitle-section {
+  text-align: center;
+  padding: 5px 15px;
+  margin: 0 auto;
+  background-color: white;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+#root #mainContent-section {
   display: flex;
   justify-content: center;
-  background-color: lightgray;
+  flex-direction: column-reverse;
+  margin: 0 auto;
+  padding: 1rem;
   gap: 5px;
 }
-#mainContent-section #generationDisplay-div .imageDisplay-div {
-  min-height: 500px;
-  min-width: 500px;
-  border: solid black 3px;
-  background-color: bisque;
+#root #mainContent-section #generationSettings-div {
+  padding: 5px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
-#mainContent-section #generationSettings-div .textInput-div {
+#root #mainContent-section #generationSettings-div .textInput-div {
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 5px;
 }
-#mainContent-section #generationSettings-div .rangeInput-div {
+#root #mainContent-section #generationSettings-div .rangeInput-div {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   gap: 5px;
 }
-#mainContent-section #generationSettings-div .rangeInput-div input {
+#root #mainContent-section #generationSettings-div .rangeInput-div input {
   text-align: center;
 }
-#mainContent-section #generationSettings-div .selectorInput-div {
+#root #mainContent-section #generationSettings-div .selectorInput-div {
   display: grid;
   grid-template-columns: 1fr 3fr 2fr;
   align-items: center;
   gap: 5px;
 }
-#mainContent-section #generationSettings-div .switchInput-div {
+#root #mainContent-section #generationSettings-div .switchInput-div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
+}
+#root #mainContent-section #generationDisplay-div .imageDisplay-div {
+  min-height: 500px;
+  min-width: 100%;
+  border: solid black 3px;
+  background-color: bisque;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#root #mainContent-section #generationDisplay-div .imageDisplay-div .carousel, #root #mainContent-section #generationDisplay-div .imageDisplay-div .slide {
+  width: 100%;
+  height: 100%;
+}
+#root #mainContent-section #generationDisplay-div .imageDisplay-div .carousel .carousel-inner .carousel-item img, #root #mainContent-section #generationDisplay-div .imageDisplay-div .slide .carousel-inner .carousel-item img {
+  width: 100%;
+  position: relative;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+#root #mainContent-section #generationDisplay-div .controlDisplay-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 5px;
+}
+
+@media screen and (min-width: 1000px) {
+  #root {
+    max-width: 1024px;
+  }
+  #root #mainContent-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }/*# sourceMappingURL=index.css.map */
