--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -16,7 +16,7 @@ body {
     padding: 10px 0;
     border: solid black 3px;
     border-radius: 15px;
-
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 
     #mainTitle-section {
         text-align: center;
@@ -25,6 +25,7 @@ body {
         background-color: white;
         width: fit-content;
         border-radius: 15px;
+        border: solid black 2px;
     }
     
     #mainContent-section {
@@ -41,10 +42,12 @@ body {
             display: flex;
             flex-direction: column;
             gap:5px;
+
+            label {font-size: large;}
     
             .textInput-div {
                 display: grid;
-                grid-template-columns: 1fr 2.8fr;
+                grid-template-columns: 1fr 3.3fr;
                 gap: 5px;
                 textarea {
                     &:not(last-child) {min-height: 64px !important;}
@@ -59,11 +62,14 @@ body {
                 gap: 5px;
     
                 input {text-align: center;}
+                input[type=number]::-webkit-inner-spin-button {
+                    opacity: 1
+                }
             }
     
             .selectorInput-div {
                 display: grid;
-                grid-template-columns: 1fr 3fr 2fr;
+                grid-template-columns: 1fr 3fr;
                 align-items: center;
                 gap: 5px;
             }
@@ -96,8 +102,8 @@ body {
                     position: absolute;
                     // top: 0;
                     // bottom: 0;
-                    // left: 0;
-                    // right: 0;
+                    left: 0;
+                    right: 0;
                     
                     .carousel-inner{
                         .carousel-item {
