--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,11 +7,16 @@ $title-background: white;
 $container-background: #343a40; //lightgray;
 $image-container-background: #545f6b;
 
-.tooltip-inner {
-    background-color: #212529 !important;
-    border: 1px solid $border-color;
-    color:#cfd3dc;
+.tooltip {
+    &:is(.show) {opacity:1 !important;}
+    
+    .tooltip-inner {
+        background-color: #212529 !important;
+        border: 1px solid $border-color;
+        // color:#cfd3dc;
+    }
 }
+
 
 body {
     // scroll-behavior: smooth;
@@ -29,14 +34,6 @@ body {
     display: flex;
     flex-direction: column;
     gap:15px;
-    // background-color: $container-background;
-    // max-width: 640px;
-    // min-width: 375px;
-    // padding: 10px 0;
-    // border: solid $border-color 1px;
-    // border-radius: 15px;
-    // box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-    // height: min-content;
 
     #mainTitle-section, #mainFooter-section {
         text-align: center;
@@ -95,13 +92,11 @@ body {
                 gap: 10px;
                 padding: 10px 0;
 
-                &:first-child {
-                    border-top:none;
-                    padding-top:0;
-                }
-
-                textarea {
-                    &:not(last-child) {min-height: 64px !important;}
+                @media screen and (min-width:1025px) {
+                    &:first-child {
+                        border-top:none;
+                        padding-top:0;
+                    }
                 }
             }
     
@@ -208,10 +203,19 @@ body {
                 display: block;
                 margin-top:100%;
             }
-
-    
+            
             .controlDisplay-div {
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+                gap:10px;
                 margin: 5px 0;
+
+                @media screen and (max-width:505px) {
+                    grid-template-columns: 1fr;
+                    button {
+                        &:last-child {order:-1}
+                    }
+                }
 
                 button {
                     width: 100%;
@@ -235,6 +239,7 @@ body {
             #generationDisplay-div {
                 display: grid;
                 grid-template-rows: 1fr 41px;
+                max-height: 700px;
                 gap:5px;
 
                 .controlDisplay-div {margin: 0;}
