--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -92,6 +92,11 @@ body {
                 gap: 10px;
                 padding: 10px 0;
 
+                textarea:not([name=seedInput]) {
+                    min-height: 84px;
+                }
+
+
                 @media screen and (min-width:1025px) {
                     &:first-child {
                         border-top:none;
@@ -151,12 +156,12 @@ body {
         #generationDisplay-div {
             
             .imageDisplay-div {
-                display: inline-block;
+                // display: inline-block;
                 position: relative;
                 width: 100%;
+                min-height: 100%;
+                max-height: 512px;
 
-                // min-height: 512px;
-                // min-width: 100%;
                 border: solid $border-color 1px;
                 border-radius: 5px;
                 // background-color: $image-container-background;
@@ -170,19 +175,20 @@ body {
                 .carousel, .slide {
                     // https://jsfiddle.net/B8FU8/2441/
                     position: absolute;
-                    // top: 0; 
-                    // bottom: 0; 
+                    top: 0;
+                    bottom: 0; 
                     left: 0;
                     right: 0;
 
                     .carousel-control-next, .carousel-control-prev, .carousel-indicators {display: none;}
                     
                     .carousel-inner{
+                        height: 100%;
                         .carousel-item {
+                            height: 100%;
                             img {
-                                width: 100%;
-                                height: 100%;
-                                position: relative;
+                                width: 100% !important;
+                                height: 100% !important;
                                 object-position: center;
                                 object-fit: scale-down;
                             }
@@ -243,6 +249,7 @@ body {
                 gap:5px;
 
                 .controlDisplay-div {margin: 0;}
+                img {max-height: 700px;}
             }
         }
     }
